Edited CMakeLists files for windows
Signed-off-by: Joppe Blondel <joppe@blondel.nl>

--- a/libvermilion/CMakeLists.txt
+++ b/libvermilion/CMakeLists.txt
@@ -16,14 +16,16 @@ target_include_directories(vermilion_core PUBLIC
 # LIBVERMILION_WINDOW
 # -------------------
 
-set(VERMILION_WINDOW_LIBS
-	m	
-)
-
 if(WIN32)
 	add_compile_definitions(VMWINDOW_WIN32)
 
-	message("-- Windows is not yet supported")
+	find_package(glfw3)
+
+	if(glfw3_FOUND)
+		message("-- GLFW system found, add to source tree")
+		add_compile_definitions(VMWINDOW_UNIX_GLFW)
+		set(VERMILION_WINDOW_LIBS ${VERMILION_WINDOW_LIBS} glfw)
+	endif()
 
 endif()
 if(UNIX AND NOT APPLE)
@@ -53,6 +55,9 @@ endif()
 
 add_library(vermilion_window SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/window/src/window.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/window/src/platform/unix_glfw/window.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/window/src/platform/unix_X11/window.cpp
 )
 target_include_directories(vermilion_window PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}/include	
