Added Windows platforms to VmWindowSupportedPlatforms
Signed-off-by: Joppe Blondel <joppe@blondel.nl>

--- a/libvermilion/CMakeLists.txt
+++ b/libvermilion/CMakeLists.txt
@@ -21,7 +21,7 @@ if(WIN32)
 
 	message("-- GLFW system being build, add to source tree")
 	add_subdirectory(${CMAKE_SOURCE_DIR}/third_party/glfw3 ${PROJECT_BINARY_DIR}/third_party/glfw3)
-	add_compile_definitions(VMWINDOW_WIN32_GLFW3)
+	add_compile_definitions(VMWINDOW_WIN32_GLFW)
 
 endif()
 if(UNIX AND NOT APPLE)
@@ -39,8 +39,7 @@ if(UNIX AND NOT APPLE)
 		message("-- GLFW system found, add to source tree")
 		add_compile_definitions(VMWINDOW_UNIX_GLFW)
 		set(VERMILION_WINDOW_LIBS ${VERMILION_WINDOW_LIBS} glfw)
-	endif()
-	if(not glfw3_FOUND)
+	else()
 		message("-- GLFW system being build, add to source tree")
 		add_subdirectory(${CMAKE_SOURCE_DIR}/third_party/glfw3 ${PROJECT_BINARY_DIR}/third_party/glfw3)
 		add_compile_definitions(VMWINDOW_UNIX_GLFW3)
