Added GLFW window to structure
Signed-off-by: Joppe Blondel <joppe@blondel.nl>

--- a/libvermilion/CMakeLists.txt
+++ b/libvermilion/CMakeLists.txt
@@ -44,6 +44,10 @@ add_library(vermilion_core SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/api.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/instance.cpp
 
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/opengl/api.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/api.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/glfw/window.cpp
+
 	${GLAD_SOURCES}
 )
 target_include_directories(vermilion_core PUBLIC
