--- a/libvermilion/CMakeLists.txt
+++ b/libvermilion/CMakeLists.txt
@@ -45,7 +45,10 @@ add_library(vermilion_core SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/instance.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/opengl/api.cpp
+
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/api.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/validationlayers.cpp
+
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/glfw/window.cpp
 
 	${GLAD_SOURCES}
