Start with physical device picking
Signed-off-by: Joppe Blondel <joppe@blondel.nl>

--- a/libvermilion/CMakeLists.txt
+++ b/libvermilion/CMakeLists.txt
@@ -48,6 +48,7 @@ add_library(vermilion_core SHARED
 
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/api.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/validationlayers.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/physicaldevice.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/glfw/window.cpp
 
