Added vkImageView creation
Signed-off-by: Joppe Blondel <joppe@blondel.nl>

--- a/libvermilion/CMakeLists.txt
+++ b/libvermilion/CMakeLists.txt
@@ -51,6 +51,7 @@ add_library(vermilion_core SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkPhysicalDevice.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkDevice.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkSwapChain.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkImageView.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/glfw/window.cpp
 
