--- a/libvermilion/CMakeLists.txt
+++ b/libvermilion/CMakeLists.txt
@@ -43,6 +43,7 @@ add_library(vermilion_core SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/window.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/api.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/instance.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/Buffer.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/opengl/api.cpp
 
@@ -50,6 +51,7 @@ add_library(vermilion_core SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/RenderTarget.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/Shader.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/Pipeline.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/Buffer.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkInstance.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkPhysicalDevice.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkDevice.cpp
@@ -58,6 +60,7 @@ add_library(vermilion_core SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkRenderPass.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkFrameBuffer.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkCommandPool.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vk_mem_alloc.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/glfw/window.cpp
 
