Created base of texture
Signed-off-by: Joppe Blondel <joppe@blondel.nl>

--- a/libvermilion/CMakeLists.txt
+++ b/libvermilion/CMakeLists.txt
@@ -47,6 +47,7 @@ add_library(vermilion_core SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/api.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/instance.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/Buffer.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/stb_image.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/opengl/api.cpp
 
@@ -56,6 +57,7 @@ add_library(vermilion_core SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/Pipeline.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/Buffer.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/Renderable.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/Texture.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkInstance.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkPhysicalDevice.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/platform/vulkan/vkDevice.cpp
