Added imgui to sandbox
Signed-off-by: Joppe Blondel <joppe@blondel.nl>

--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -5,9 +5,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_executable(sandbox
 	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp	
+	${CMAKE_CURRENT_SOURCE_DIR}/src/gui.cpp	
+
+	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui_draw.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui_demo.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui_tables.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui_widgets.cpp
 )
 target_include_directories(sandbox PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}/../libvermilion/include	
+	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui
 )
 target_link_libraries(sandbox
 	vermilion_core
