--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -7,15 +7,15 @@ add_executable(sandbox
 	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp	
 	${CMAKE_CURRENT_SOURCE_DIR}/src/gui.cpp	
 
-	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui_draw.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui_demo.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui_tables.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui/imgui_widgets.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/imgui.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/imgui_draw.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/imgui_demo.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/imgui_tables.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/imgui_widgets.cpp
 )
 target_include_directories(sandbox PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}/../libvermilion/include	
-	${CMAKE_CURRENT_SOURCE_DIR}/../third_party/imgui
+	${CMAKE_CURRENT_SOURCE_DIR}/src/imgui
 )
 target_link_libraries(sandbox
 	vermilion_core
