--- a/libvermilion/CMakeLists.txt
+++ b/libvermilion/CMakeLists.txt
@@ -49,6 +49,7 @@ add_library(vermilion_core SHARED
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/api.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/instance.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/Buffer.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core/src/Pipeline.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/stb_image.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/core/src/vermilion.cpp
 
