Added example folder with simple textured triangle example
Signed-off-by: Joppe Blondel <joppe@blondel.nl>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ link_directories("${PROJECT_BINARY_DIR}/out")
 
 add_subdirectory(libvermilion)
 add_subdirectory(sandbox)
+add_subdirectory(examples)
