Added two examples
+ uniforms
+ uniform buffers

Signed-off-by: Joppe Blondel <joppe@blondel.nl>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,3 +12,23 @@ target_include_directories(example_triangle PUBLIC
 target_link_libraries(example_triangle
 	vermilion_core
 )
+
+add_executable(example_uniform
+	${CMAKE_CURRENT_SOURCE_DIR}/src/example_uniform.cpp	
+)
+target_include_directories(example_uniform PUBLIC
+	${CMAKE_CURRENT_SOURCE_DIR}/../libvermilion/include	
+)
+target_link_libraries(example_uniform
+	vermilion_core
+)
+
+add_executable(example_uniform_buffer
+	${CMAKE_CURRENT_SOURCE_DIR}/src/example_uniform_buffer.cpp	
+)
+target_include_directories(example_uniform_buffer PUBLIC
+	${CMAKE_CURRENT_SOURCE_DIR}/../libvermilion/include	
+)
+target_link_libraries(example_uniform_buffer
+	vermilion_core
+)
